--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <nav>
-        <h2>Cover</h2>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Features</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <h1>Cover your page.</h1>
-        <p>Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-        <button>Learn more</button>
-    </main>
+    <div class="big-container">
+        <nav>
+            <h2>Cover</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Features</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h1>Cover your page.</h1>
+            <p>Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <p><a href="">Learn more</a></p>
+        </main>
+        <footer>
+            <p>Cover template for <a href="Bootstrap"></a>,by <a href="@mdo"></a></p>
+        </footer>
+    </div>
 </body>
 </html>
