changed some properties

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="big-container">
         <nav>
-            <h2>Cover</h2>
+            <h3>Cover</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Features</a></li>
@@ -22,7 +22,7 @@
             <p><a href="">Learn more</a></p>
         </main>
         <footer>
-            <p>Cover template for <a href="Bootstrap"></a>,by <a href="@mdo"></a></p>
+            <p>Cover template for <a class="footer a" href="Bootstrap"></a>,by <a class="footer a"href="@mdo"></a></p>
         </footer>
     </div>
 </body>
