changed some properties

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav>
             <h3>Cover</h3>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Features</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a  href="">Home</a></li>
+                <li><a  href="">Features</a></li>
+                <li><a  href="">Contact</a></li>
             </ul>
         </nav>
         <main>
@@ -22,7 +22,7 @@
             <p><a href="">Learn more</a></p>
         </main>
         <footer>
-            <p>Cover template for <a class="footer a" href="Bootstrap"></a>,by <a class="footer a"href="@mdo"></a></p>
+            <p>Cover template for <a class="footer-a" href="Bootstrap"></a>,by <a class="footer-a"href="@mdo"></a></p>
         </footer>
     </div>
 </body>
