--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav>
             <h3>Cover</h3>
             <ul>
-                <li><a  href="">Home</a></li>
-                <li><a  href="">Features</a></li>
-                <li><a  href="">Contact</a></li>
+                <li><a class="ul-a"  href="">Home</a></li>
+                <li><a class="ul-a2"  href="">Features</a></li>
+                <li><a class="ul-a2" href="">Contact</a></li>
             </ul>
         </nav>
         <main>
