--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <main>
             <h1>Cover your page.</h1>
             <p>Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p><a href="">Learn more</a></p>
+            <p class="button"><a href="">Learn more</a></p>
         </main>
         <footer>
-            <p>Cover template for <a class="footer-a" href="Bootstrap"></a>,by <a class="footer-a"href="@mdo"></a></p>
+            <p class="footer-p">Cover template for <a class="footer-a" href="">Bootstrap</a>,by <a class="footer-a"href="">@mdo</a></p>
         </footer>
     </div>
 </body>
